# rust-hex-template

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
application/: Cargo.toml
application/src/: lib.rs  order.rs  user.rs
application/src/shared/: mod.rs
cmd/service/: Cargo.toml
cmd/service/src/: main.rs
core/domain/: Cargo.toml
core/domain/src/: error.rs  lib.rs  pagination.rs  values.rs
core/domain/src/entities/: product.rs  user.rs
core/domain/src/port/: user.rs
core/usecases/: Cargo.toml
core/usecases/src/: order.rs  product.rs
domain/src/: error.rs  lib.rs
domain/src/entities/: order.rs
domain/src/macros/: json.rs
domain/src/port/: order.rs  product.rs
domain/src/services/: pricing.rs
infra/http-axum/: Cargo.toml
infra/http-axum/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  server.rs  telemetry.rs  validation.rs
infra/http-axum/src/order/: routes.rs
infra/http-axum/src/order/dtos/: input.rs  output.rs
infra/http-axum/src/product/: routes.rs
infra/http-axum/src/product/dtos/: input.rs  output.rs
infra/http-axum/src/routes/: order.rs  product.rs  user.rs
infra/http-axum/src/routes/order/: dtos.rs
infra/http-axum/src/routes/product/: dtos.rs
infra/http-axum/src/routes/user/: dtos.rs
infra/http-axum/src/server/: error.rs  middleware.rs  response.rs  state.rs  validation.rs
infra/http-axum/src/user/: routes.rs
infra/http-axum/src/user/dtos/: input.rs  output.rs
infra/mongo/: Cargo.toml
infra/mongo/src/order/: model.rs  repository.rs
infra/mongo/src/product/: model.rs  repository.rs
infra/mongo/src/user/: model.rs  repository.rs
infra/redis/: Cargo.toml
infra/redis/src/: lib.rs
infrastructure/driven/mongo/src/: lib.rs  provider.rs
infrastructure/driven/mongo/src/order/: model.rs  repository.rs
infrastructure/driven/mongo/src/product/: model.rs  repository.rs
infrastructure/driven/mongo/src/user/: model.rs  repository.rs
infrastructure/driving/http-axum/: Cargo.toml
infrastructure/driving/http-axum/src/: server.rs
infrastructure/driving/http-axum/src/routes/: order.rs  product.rs  user.rs
infrastructure/driving/http-axum/src/routes/order/: dtos.rs
infrastructure/driving/http-axum/src/routes/product/: dtos.rs
infrastructure/driving/http-axum/src/routes/user/: dtos.rs
infrastructure/driving/http-axum/src/server/: state.rs
service/: Cargo.toml
service/src/: config.rs  main.rs  telemetry.rs
shared/: Cargo.toml
shared/src/: config.rs  tracer.rs
src/: main.rs  shared.rs
src/application/: order.rs  product.rs  user.rs
src/domain/: values.rs
src/domain/entities/: order.rs  product.rs  user.rs
src/domain/macros/: json.rs
src/domain/port/: order.rs  product.rs  user.rs
src/domain/services/: pricing.rs
src/infrastructure/: driving.rs
src/infrastructure/driven/: redis.rs
src/infrastructure/driven/mongo/: provider.rs
src/infrastructure/driven/mongo/order/: model.rs  repository.rs
src/infrastructure/driven/mongo/product/: model.rs  repository.rs
src/infrastructure/driven/mongo/user/: model.rs  repository.rs
src/infrastructure/driving/http_axum/: routes.rs  server.rs
src/infrastructure/driving/http_axum/routes/: order.rs  product.rs  user.rs
src/infrastructure/driving/http_axum/routes/order/: dtos.rs
src/infrastructure/driving/http_axum/routes/product/: dtos.rs
src/infrastructure/driving/http_axum/routes/user/: dtos.rs
src/infrastructure/driving/http_axum/server/: error.rs  health.rs  middleware.rs  response.rs  state.rs  validation.rs
src/shared/: config.rs  http_client.rs  tracer.rs
src/shared/tracer/: format.rs
