[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
bson = { version = "3", features = ["chrono-0_4", "serde", "serde_json-1"] }
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
] }
chrono-tz = "0.10"
dotenvy = "0.15"
erased-serde = "0.4"
futures = "0.3"
mongodb = { version = "3.4", features = [
    "bson-3",
    "rustls-tls",
    "dns-resolver",
    "sync",
    "opentelemetry",
] }
opentelemetry = "0.31"
opentelemetry-gcloud-trace = "0.23"
opentelemetry-semantic-conventions = "0.31"
opentelemetry_sdk = "0.31"
redis = { version = "1", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.13", default-features = false, features = [
    "http2",
    "json",
    "rustls",
] }
reqwest-middleware = "0.5"
reqwest-tracing = { version = "0.7", features = ["opentelemetry_0_31"] }
rmp-serde = "1.3"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["make", "util"] }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "timeout",
    "compression-gzip",
    "decompression-gzip",
] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "fmt",
    "env-filter",
] }
uuid = { version = "1", features = ["v7", "serde"] }
validator = { version = "0.20", features = ["derive"] }

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
unwrap_used = "deny"

[profile.release]
lto = "thin"
opt-level = 3
strip = true
codegen-units = 16

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 3
