[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local workspace dependencies
domain = { workspace = true }
infra-http-axum = { workspace = true }
infra-mongo = { workspace = true }
infra-redis = { workspace = true }
usecases = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Utilities & Config
anyhow = { workspace = true }
dotenvy = { workspace = true }
rustls = { workspace = true }

# Observability & Tracing
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-stackdriver = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry-gcloud-trace = { workspace = true }
opentelemetry_sdk = { workspace = true }
