[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-gcloud-trace = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-stackdriver = { workspace = true }
tracing-subscriber = { workspace = true }
