[package]
name = "infra-http-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local workspace dependencies
domain = { workspace = true }
usecases = { workspace = true }
infra-mongo = { workspace = true }
infra-redis = { workspace = true }

# Web Framework / HTTP
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }

# Serialization / Validation
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.3"
validator = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-stackdriver = { workspace = true }
tracing-opentelemetry = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-gcloud-trace = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }

# Utils / Types
rustls = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
