[package]
name = "infra-http-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local workspace dependencies
domain = { workspace = true }
infra-mongo = { workspace = true }
infra-redis = { workspace = true }
usecases = { workspace = true }

# Web Framework / HTTP
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization / Validation
rmp-serde = "1.3"
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-stackdriver = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry-gcloud-trace = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true }

# Utils / Types
anyhow = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
