[package]
name = "infra-http-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local workspace dependencies
domain = { workspace = true }
usecases = { workspace = true }

# Web Framework / HTTP
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization / Validation
rmp-serde = "1.3"
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }

# Observability
opentelemetry = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
