[package]
name = "infra-mongo"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
