[package]
name = "infra-mongo"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
bson = { workspace = true }
chrono = { workspace = true }
domain = { workspace = true }
futures = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
